--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,10 +4,7 @@ font-weight: normal;
 font-size: 24px;
 line-height: 1.17;
 color: #fff;
-margin-right: 18px;
+margin-left: 18px;
+text-decoration: none;
 }
 
-.header__lang-link:last-of-type {
-  text-decoration: none;
-  margin-right: 0;
-}
