--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,6 +2,6 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   background-color: #2A2C2F;
 }
