--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,7 +4,13 @@ font-weight: normal;
 font-size: 24px;
 line-height: 1.17;
 color: #fff;
-margin-left: 18px;
+margin-left: 14px;
 text-decoration: none;
 }
 
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.11;
+  }
+  }
