--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,13 +1,31 @@
 .lead__caption {
-  margin: 6px 0 0;
+  margin: 8px auto 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Inter;
-  color: #fff;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .lead__caption {
+    max-width: 928px;
+
+}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .lead__caption {
+    margin: 8px 0 0 24px;
+}
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin: 8px 0 0 16px;
+}
 }
