--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,12 @@
 .lead__image {
 width: 100%;
+display: block;
+margin: 0 auto;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .lead__image {
+    max-width: 928px;
+
+}
 }
