--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,6 +8,27 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
-  color: #fff;
-  width: calc(100% - (320px - 148px)*2);
+  width: 640px;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+}
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    margin-top: 15px;
+    margin-bottom: 40px;
+    width: 288px;
+    font-size: 16px;
+    line-height: 1.25;
+}
 }
