--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,10 @@
 .page {
-  min-width: 320px;
+  /* min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 28px 48px 0;
-
+  padding: 28px 48px 0; */
+  /* max-width: 1184px; */
+  margin: 0 auto;
+  max-width: 1280px;
 }
