--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,3 +8,15 @@
   font-size: 12px;
   line-height: 1.5;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro__list {
+    margin: 0 0 88px;
+}
+}
+
+@media screen and (max-width: 767px) {
+  .intro__list {
+    margin: 0 0 64px;
+}
+}
