--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -8,3 +8,9 @@
   font-size: 16px;
   line-height: 1.63;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__text {
+    margin-bottom: 34px;
+}
+}
