--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,3 +8,19 @@
   font-size: 54px;
   line-height: 1.07;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro__title {
+    padding-top: 89px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+    padding-top: 64px;
+    max-width: 250px;
+}
+}
