--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,4 +1,29 @@
 .intro {
-  width: 690px;
+  max-width: 690px;
   padding-left: 148px;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .intro {
+    padding-left: calc((100vw - 928px)/2);
+  }
+}
+
+@media screen and (max-width:1023px) {
+  .intro {
+    padding-left: 0px;
+    margin: 0 auto;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    padding: 0 16px 0;
+  }
 }
