--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,3 +1,5 @@
-place__description {
-  grid-area: description;
-}
+@media screen and (max-width: 767px) {
+  .place__description {
+    padding: 0 16px 0;
+  }
+  }
