--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,11 +4,18 @@
   box-sizing: border-box;
   font-family: Inter;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 18px;
   line-height: 1.63;
-  color: #fff;
   }
+
 .place__paragraph:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 1.63;
+    }
+  }
