--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,11 +2,25 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  grid-area: title;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
-  color: #fff;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__title {
+    max-width: 330px;
+    font-size: 42px;
+    line-height: 1.10;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    padding-left: 16px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+  }
