--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,44 @@
 .place {
  display: grid;
- grid-template-areas:
+ /* grid-template-areas:
  "title website"
  "image description"
- ;
+ ; */
+
  grid-template-columns: 460px 1fr;
  gap: 48px 40px;
- padding-top: 80px;
+ padding-top: 79px;
+}
+
+.place:first-of-type {
+  padding-top: 94px;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    column-gap: 32px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 340px 1fr;
+    column-gap: 28px;
+    padding-top: 69px;
+  }
+  .place:first-of-type {
+    padding-top: 89px;
+}
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    grid-template-columns: 100%;
+    padding-top: 52px;
+    row-gap: 30px;
+  }
+  .place:first-of-type {
+    padding-top: 64px;
+}
 }
