--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,16 @@
 .places {
-  width: calc(100% - 100px*2);
+  max-width: 984px;
   margin: 0 auto;
-  padding: 12px 0 0 ;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .places {
+    max-width: 720px;
+  }
 }
