--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -24,9 +24,13 @@
 
 @media screen and (max-width: 767px) {
   .photo-grid {
-
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
     gap: 12px;
-    margin: 0 16px 0;
 }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .photo-grid {
+    grid-template-columns: repeat(auto-fit, minmax(264px, 1fr));
+    margin: 0 16px 0;
+  }
 }
