--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,8 @@
 .cover__subtitle {
-  margin: 32px 0 0;
-  padding: 0 412px;
+  margin: 32px auto 0;
+  padding: 0;
   box-sizing: border-box;
+  max-width: 360px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
