--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,8 +1,10 @@
 .root {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0; */
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   background-color: #2A2C2F;
   color: #fff;
+  max-width: 1280px;
+  margin: 0 auto;
 }
