--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -19,12 +19,36 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.8);
-  opacity: 0.5;
+  background-color: #2a2c2f;
+  opacity: 0.3;
   z-index: -1;
   transition: opacity 400ms ease-in-out;
 }
 
 .cover__link:hover:before {
   opacity: 0.8;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 767px){
+  .cover__link {
+    min-height: 340px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .cover__link {
+    min-height: 200px;
+  }
 }
