--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,3 +10,11 @@
   text-align: center;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    max-width: 254px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
