--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,21 @@
 .cover {
 padding: 92px 48px 0;
 }
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .cover {
+    padding: 92px 0 0;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .cover {
+    padding: 86px 0 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    padding: 66px 0 0;
+  }
+}
