--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,3 +8,9 @@ font-weight: normal;
 font-size: 14px;
 line-height: 1.14;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 1;
+  }
+}
