--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,9 @@
-.footer__links {
-
+@media screen and (max-width: 767px) {
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    margin-bottom: 48px;
+  }
 }
+
