--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,28 @@
 .footer {
+  max-width: 1184px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 92px 0 24px;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .footer {
+    width: calc(100% - 48px*2);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    width: calc(100% - 24px*2);
+    padding-top: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    display: block;
+    padding: 64px 0 24px 16px;
+  }
 }
