--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 .page {
-  /* max-width: 1280px;
-  margin: 0 auto; */
+  max-width: 1280px;
+  margin: 0 auto;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  color: #fff;
 }
