--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,9 @@
   margin: 0 auto;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   color: #fff;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%; 
 }
