--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,21 +1,42 @@
 .cover {
-  padding: 92px 48px 0;
+  max-width: 1184px;
+  background-image: url(../../images/cover-trains.jpg);
+  background-size: cover;
+  margin: 92px auto 0;
+  min-height: 740px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 @media (min-width: 1024px) and (max-width: 1279px) {
   .cover {
-    padding: 92px 0 0;
+    min-height: 640px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    padding: 86px 0 0;
+    min-height: 480px;
+    margin-top: 86px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover {
-    padding: 66px 0 0;
+    margin-top: 66px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 767px) {
+  .cover {
+    min-height: 340px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .cover {
+    min-height: 200px;
   }
 }
