--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,9 +1,15 @@
+.footer__links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  gap: 19px;
+}
+
 @media screen and (max-width: 767px) {
   .footer__links {
-    display: flex;
     flex-direction: column;
-    row-gap: 32px;
+    gap: 32px;
     margin-bottom: 48px;
   }
 }
-
